@@ -1,5 +1,6 @@
 package com.robertx22.age_of_exile.uncommon.utilityclasses;
 
+import com.robertx22.age_of_exile.config.forge.ModConfig;
 import net.minecraft.entity.player.PlayerEntity;
 
 import java.util.ArrayList;
@@ -34,7 +35,9 @@ public class TeamUtils {
     }
 
     public static boolean areOnSameTeam(PlayerEntity p1, PlayerEntity p2) {
-
+        if (ModConfig.get().Server.ALL_PLAYERS_ARE_TEAMED_PVE_MODE) {
+            return true;
+        }
         boolean vanilla = p1.getScoreboardTeam() != null && p2.getScoreboardTeam() != null && p1.getScoreboardTeam()
             .isEqual(p2.getScoreboardTeam());
 
