@@ -8,9 +8,10 @@ Repair it first, because any hit will break it. This is because when max durabil
 - repair station now sucks fuel only when needed
 - added config to show area screen text
 - added level distance penalty config
-
-todo
 - added golem boss which you can summon same as a wither but: soul sand block > iron block and mob head > bone block.
+- you now need material only gotten by the golem boss drops to craft the modify station. 
+- added config that by default makes all players count as if teamed (PVE mode basically), disable for pvp servers
+This should hopefully stop the bug reports of "I can't heal my friend". But whether i keep this as on by default depends on amount of pvp players.
 
 v.1.1.3
 - fix day mobs config not working
